--- a/vignettes/a-Diagonal-model.Rmd
+++ b/vignettes/a-Diagonal-model.Rmd
@@ -281,7 +281,7 @@ The $BTSPAS$ package also has additional features and options:
 * if $u2$ is missing for any stratum, the program will use the spline to interpolate the 
 number of unmarked fish in the population for the
 missing stratum.
-* if $n1$ **and** $m2$ are 0, then these strata provide no information towards recapture probabilties.
+* if $n1$ **and** $m2$ are 0, then these strata provide no information towards recapture probabilities.
 This is useful when no release take place in a stratum (e.g. trap did not run) and so you need
 'dummy' values as placeholders.
 Of course is $n1>0$ and $m2=0$, this provides information that the capture probability may be small.
