--- a/vignettes/e-Bias-from-incomplete-sampling.Rmd
+++ b/vignettes/e-Bias-from-incomplete-sampling.Rmd
@@ -694,11 +694,12 @@ Smoothing Population Size Estimates for Time-Stratified MarkRecapture Experiment
 Biometrics, 67, 1498–1507.
 https://doi.org/10.1111/j.1541-0420.2011.01599.x 
 
-Darroch, J. N. (1961). The two-sample capture-recapture census when tagging and sampling are stratified. Biometrika, 48, 241–260.
-https://www.jstor.org/stable/2332748
+Darroch, J. N. (1961). 
+The two-sample capture-recapture census when tagging and sampling are stratified. Biometrika, 48, 241–260.
+https://doi.org/10.2307/23327
 
 Plante, N., L.-P Rivest, and G. Tremblay. (1988). Stratified Capture-Recapture Estimation of the Size of a Closed Population. Biometrics 54, 47-60.
-https://www.jstor.org/stable/2533994
+https://doi.org/10.2307/2533994
 
 Schwarz, C. J., & Taylor, C. G. (1998). The use of the stratified-Petersen estimator in fisheries management with an illustration of estimating the number of pink salmon (Oncorhynchus gorbuscha) that return to spawn in the Fraser River. Canadian Journal of Fisheries and Aquatic Sciences, 55, 281–296.
 https://doi.org/10.1139/f97-238
